tests/paczka1/small_fuzzy/21630175.err
Error in line 1: S695 S405 50,6
Error in line 3: 65RlRP0cF A426 24,8
Error in line 7: CA0eIfp A426 -1,8
